--- a/docs/人工智能.md
+++ b/docs/人工智能.md
@@ -539,3 +539,96 @@
 ![faceapi](images/faceapi/样例代码/faceapi_sample_8.png "faceapi示例8")
 
 
+---  
+
+## 身体姿态检测
+![faceapi](images/faceapi/ext_faceapi.png)  
+### 人脸关键点介绍
+    通过拖动积木块，实现人脸检测，得到情感置信度，人脸特征坐标，人脸相似度，通过添加人脸部数据，进行人脸识别	
+
+### 积木块说明
+### 1. 打开(关闭)摄像头
+打开(关闭)摄像打开，进入插件摄像头自动打开。  
+![faceapi](images/faceapi/积木块说明/faceapi_video.png "faceapi积木块1")  
+
+### 2. 视频透明度设置
+可以设置视频的透明度，默认为50。  
+![faceapi](images/faceapi/积木块说明/faceapi_video2.png "faceapi积木块2")  
+
+### 3. 单人人脸检测
+点击积木块可以进行单人的人脸检测。  
+![faceapi](images/faceapi/积木块说明/faceapi_single_facede.png "faceapi积木块3") 
+ 
+### 样例代码   
+点击小旗子运行积木块，进行人脸检测，所用模型是tiny模型，保证脸部所有特征位置出现在镜头中。   
+![echart](images/faceapi/样例代码/faceapi_sample_1.png "faceapi示例1")  
+
+### 4. 停止检测 
+停止人脸检测。  
+![faceapi](images/faceapi/积木块说明/faceapi_facede_stop.png "faceapi积木块4")
+ 
+### 样例代码  
+点击小绿旗，停止人脸检测。    
+![faceapi](images/faceapi/样例代码/faceapi_sample_2.png "faceapi示例2") 
+
+### 5. 表情自信度
+得到愤怒，厌恶，担心，快乐，中立，伤心，惊讶表情的自信度。  
+![faceapi](images/faceapi/积木块说明/faceapi_expre.png "faceapi积木块5")  
+
+### 样例代码  
+点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出快乐自信度的值。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_3.png "faceapi示例3")
+
+### 6. 脸部特征的值
+得到鼻尖,鼻根,下巴,左眼外角,左眼内角,右眼外角,右眼内角,嘴中心,嘴左角,嘴右角,左脸最外,右脸最外的X,Y坐标值
+![faceapi](images/faceapi/积木块说明/faceapi_XY.png "faceapi积木块6")  
+
+### 样例代码  
+点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出脸部鼻尖的X坐标值。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_4.png "faceapi示例4")
+
+### 7. 人脸相似度
+得到人脸相似度的值。   
+![faceapi](images/faceapi/积木块说明/faceapi_simi.png "faceapi积木块7")  
+
+### 样例代码  
+点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出人脸相似度值。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_5.png "faceapi示例5")
+
+### 8. 添加人脸进行人脸识别
+输入名称,添加带名称的数据到匹配组。  
+![faceapi](images/faceapi/积木块说明/faceapi_add.png "faceapi积木块8")  
+
+### 9. 开始人脸识别 
+对出现在摄像头的人脸进行人脸识别。   
+![faceapi](images/faceapi/积木块说明/faceapi_start_rege.png "faceapi积木块9") 
+
+### 10. 识别结果 
+得到出现在摄像头的人脸名称。   
+![faceapi](images/faceapi/积木块说明/faceapi_result.png "faceapi积木块10")  
+
+### 样例代码  
+点击添加人脸[alla]进行人脸识别积木块，添加完成后，点击小绿旗，开启人脸识别，当人脸识别打开，重复执行说出识别结果。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_6.png "faceapi示例6")
+
+### 11. 当时识别到 
+当返回识别结果是被触发。   
+![faceapi](images/faceapi/积木块说明/faceapi_when.png "faceapi积木块11")  
+
+### 样例代码  
+点击添加人脸[alla]进行人脸识别积木块，添加完成后，点击小绿旗，开启人脸识别，当识别到是alla时，说出识别结果。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_7.png "faceapi示例7")
+
+### 12. 多人人脸检测 
+进行多人人脸检测。     
+![faceapi](images/faceapi/积木块说明/faceapi_all_facede.png "faceapi积木块12")   
+
+### 13. 多人检测数据 
+获取多人检测数据。    
+![faceapi](images/faceapi/积木块说明/faceapi_all_result.png "faceapi积木块13")   
+
+### 样例代码  
+点击小绿旗，开启多人人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出多人检测数据。   
+![faceapi](images/faceapi/样例代码/faceapi_sample_8.png "faceapi示例8")
+
+
