update smarthome plugin

--- a/docs/智能家居.md
+++ b/docs/智能家居.md
@@ -95,7 +95,7 @@
 
 ### 4. 无线开关积木
 
-当指定的无线开关进行单击，双击等操作时，触发。
+支持短按、长按、双击。当指定的无线开关进行单击，双击等操作时，触发。
 
 ![smart_home](images/智能家居/积木块说明/smart_home_mi_switch.png)
 
