--- a/docs/智能家居.md
+++ b/docs/智能家居.md
@@ -1,237 +1,29 @@
 # 小小创造家插件介绍
 
 > ![xxczj](./extensions.png)
-# 智能家居
-![smart_home](images/智能家居/ext_smart_home.png)
-
-
-	包含米家智能家居、泥巴机器人、机器学习等10余种人工智能软、硬件积木插件。	
-	基于米家智能家居套件，让儿童充分体验空间编程。该插件基于dlna设备发现功能去获取自配置的小狮网关IP。
-
----
-## 米家智能家居套装  
-	
-	包括米家智能网关、无线开关、人体红外、门窗传感器、智能插座几种智能家居常用的智能硬件设备。 
-	 
-![smart_home](images/智能家居/硬件说明/小米智能家居套装.png)
-
-米家智能网关
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-网关.png)
-	
-	网关作用，用来自动检测网关下的所有设备并通信。
-
-无线开关
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-无线开关.png)
-	
-	开关作用，按下即动作，松开释放。在教学场景中可以用来作为开关按键控制。
-
-人体红外
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-人体红外.png)
-
-	人体红外作用，用来探测是否有人经过。频率为一分钟探测一次。
-
-门窗传感器
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-门窗传感器.png)
-
-	门窗传感器作用，用来感应门窗的打开和闭合。
-
-智能插座
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-智能插座.png)
-
-	智能插座作用，用来将插入的识别智能化。
-
-## 魔方控制器
-![smart_home](images/智能家居/硬件说明/魔方.png)
-
-	魔方控制器是一款基于动作感应的智能无线控制器，识别6种控制动作。分别是：
-	- 摇一摇
-	- 敲两下
-	- 翻转90°
-	- 翻转180°
-	- 平面旋转
-	- 推一推
-	这些动作单个使用或者组合起来使用，在教学场景中可以用来作为密码锁，或者开关使用。  
-
-<br />
-
-## dlna设备发现说明  
-	
-	dlna可自动发现局域网内的小狮网关信息,加载智能家居插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可与小狮网关建立连接。进行相应的智能硬件操作。
-
-### dlna扫描发现
-
-![smart_home](images/智能家居/smart_home_dlna_scan.png)
-
-##积木块操作
-	
-### 1. 操作灯积木	
-
-将通过局域网接入的智能灯打开或者关闭。
-
-![smart_home](images/智能家居/积木块说明/smart_home_op_light.png)
-
-<br />
-
-### 2. 设置灯颜色积木
-
-将通过局域网接入的智能灯颜色设成指定的七种颜色。
-
-![smart_home](images/智能家居/积木块说明/smart_home_op_light_color.png)
-
-<br />
-
-### 3. 设置灯颜色积木（rgb）
-
-设置智能灯的闪烁跳动模式。		
-
-![smart_home](images/智能家居/积木块说明/smart_home_op_light_color_rgb.png)
-
-<br />
-
-### 4. 无线开关积木
-
-支持短按、长按、双击。当指定的无线开关进行单击，双击等操作时，触发。
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_switch.png)
-
-<br />
-
-### 5. 人体红外探测积木
-
-当指定的红外探测器探测到人体通过时触发。
-> _注意：该模块受米家智能硬件条件限制，1分钟内只能触发一次。_		
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_ir.png)
-
-<br />
-
-### 6. 门窗传感器积木
-
-当指定的门窗传感器打开或者闭合时，触发。
-	
-![smart_home](images/智能家居/积木块说明/smart_home_mi_door.png)
-
-<br />
-
-### 7. 魔方控制器积木
-
-当指定的魔方进行翻转等相应操作时，触发。	
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_squre.png)
-
-<br />
-
-### 8. 百度音箱
-
-使用百度音箱进行文字tts文字播报。
-
-![smart_home](images/智能家居/积木块说明/smart_home_baidu.png)
-
-<br />
-
-### 9. 判断魔方状态积木块
-
-判断指定魔方最新状态和所选状态是否一致。
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_squre_judge.png)
-
-<br />
-
-### 10. 判断开关状态积木块
-
-判断指定开关最新状态和所选状态是否一致。
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_switch_judge.png)
-
-<br />
-
-### 11. 判断门窗状态积木块
-
-判断指定门窗最新状态和所选状态是否一致。
-	
-![smart_home](images/智能家居/积木块说明/smart_home_mi_door_judge.png)
-
-<br />
-
-### 12. 判断人体传感器状态积木块
-
-判断指定人体传感器最新状态和所选状态是否一致。	
-
-![smart_home](images/智能家居/积木块说明/smart_home_mi_ir_judge.png)
-
-<br />
-
-### 示例	
-当魔方进行摇一下操作时，会触发执行将灯打开，将灯的颜色设成红色，小度音箱播报，灯已打开，一秒之后，将灯关闭，左边积木块会检测魔方的状态，当魔方摇动时，小度音箱会说灯已打开，并将灯关闭。	
-![smart_home](images/智能家居/样例代码/smart_home_mi_switch_sample.png)
-<br />
-
----  
-##  彩光LED灯泡
-![yeelight](images/yeelight/ext_yeelight.png)
-
-### 彩光LED灯泡介绍
-	彩光LED灯泡可以设计成各种模式和颜色。丰富家庭氛围。
-
-<br />
-
-### 1.扫描彩光LED灯泡积木块
-扫描客户端所在局域网下的所有彩光LED灯泡。
-
-![yeelight](images/yeelight/积木块说明/yeelight_scan.png)
-
-<br />
-
-### 2.设置彩光LED灯泡颜色积木块
-将彩光LED灯泡设置成不同的rgb颜色值。
-	
-![yeelight](images/yeelight/积木块说明/yeelight_set_color.png)
-
-
-<br />
-
-### 3.设置彩光LED灯泡亮度积木块
-将彩光LED灯泡设置成相应的亮度，取值为0~100。
-
-![yeelight](images/yeelight/积木块说明/yeelight_set_brightness.png)
-
-
-<br />
-
-### 4.设置彩光LED灯泡色温积木块
-将彩光LED灯泡设置成相应的色温，取值为1700~4500。
-
-![yeelight](images/yeelight/积木块说明/yeelight_set_temperature.png)
-
-<br />
-
-### 5.设置彩光LED灯泡律动模式积木块
-将彩光LED灯泡设置成相应的亮度，取值为0~100。
-
-![yeelight](images/yeelight/积木块说明/yeelight_set_model.png)
-
-
-<br />
-
-### 6.控制彩光LED灯泡开关积木块
-将彩光LED灯泡打开或者关闭。
-
-![yeelight](images/yeelight/积木块说明/yeelight_set_tiggle.png)
-
-
-<br />
-
-### 示例		
-	
-首先扫描所有的彩光LED灯泡，选择其中的某个灯进行相应的打开，改变亮度，改变颜色，改变色温，关闭。
-
-![yeelight](images/yeelight/样例代码/yeelight_sample.png)
-<br />
-
----
-<br />
+# 智能家居模块
+## 小米网关灯
+
+|   指令  |  功能   |  案例   |  参考程序   |
+| --- | --- | --- | --- |
+|![smart home](./images/网关灯开关.png)|  将网关灯打开或关闭 。  | 当响度大于30时，网关灯打开，过一会熄灭。    | ![smart home](./images/网关灯开关案例.png)   |
+| ![smart home](./images/网关灯亮度.png) | 改变网关灯亮度。    | 按下左移键，网关灯亮度较暗；按下右移键，网关灯亮度较亮。    |![smart home](./images/网关灯亮度案例.png) |
+|![smart home](./images/网关灯颜色.png) |  将网关灯的颜色改为指定颜色。   |   网关灯的颜色每一秒变化一次。  |![smart home](./images/网关灯颜色案例.png)  |
+|![smart home](./images/网关灯RGB.png)|  通过修改RGB的值改变网关灯的颜色。 |将网关灯的颜色调整为最绿色。| ![smart home](./images/网关灯RGB最绿色.png)|
+## 小度音箱
+
+|    指令 | 功能    |  案例   |参考程序     |
+| --- | --- | --- | --- |
+|  ![smart home](./images/小度音箱播报.png) |    可以规定小度音箱语音播报的内容。 |  当网关灯亮起时，小度音箱播报“欢迎光临”。|  ![smart home](./images/小度音箱“欢迎光临”.png) |
+
+## 小米开关
+|    指令 | 功能    |  案例   |参考程序     |
+| --- | --- | --- | --- |
+|![smart home](./images/开关触发事件.png)|    当触发开关对应的动作时，执行对应事件。 | 当开关长按时，角色右转一段时间|   ![enter description here](./images/开关长按触发旋转.png)|
+|![smart home](./images/开关动作条件.png)| 当开关的状态满足条件时，执行对应的动作。| 当开关的状态为单击时，角色一直说：“你好”，直到开关的状态被改变,条件不满足。|  ![smart home](./images/开关条件满足执行说“你好”.png)|
+
+## 人体红外传感器
+|    指令 | 功能    |  案例   |参考程序     |
+| --- | --- | --- | --- |
+|![smart home](./images/红外探测器事件.png)|    当有人体的存在或移动时，执行对应事件。 | 当有人体的存在或移动时，小度音箱说：“你好呀！”|![smart home](./images/红外探测器打招呼.png)|
+|![smart home](./images/人体传感器状态判断.png)|    当检测到有人体的存在或移动时，条件成立。 | 当有人体的存在或移动时，小度音箱说：“你好呀！”，当人离开时，有人的状态会保持一分钟。|![smart home](./images/人体传感器判断案例.png)|
