--- a/docs/人工智能.md
+++ b/docs/人工智能.md
@@ -1,1154 +1,108 @@
-
-## 口罩人脸识别
-
-![face_mask](images/口罩人脸识别/ext_face_mask.png)  
-### 口罩人脸识别
-	包括是否戴口罩和未戴口罩人员进行人脸识别，该插件基于dlna设备发现功能去获取自配置的小狮网关IP。
-
--  `是否戴口罩` - 对人脸是否戴口罩进行检测
- 	- 例如，是全体还是部分人员戴口罩
--  `人脸识别` - 对未戴口罩的刃进行人脸识别
- 	- 例如，如果没有戴口罩，可以进行人脸识别
--   `人脸添加` - 将人脸添加到人脸库中
- 	- 例如，将姓名“张三”和对应的人脸截图添加到人脸库中
-<br />
-
-### dlna设备发现说明  
-	
-	dlna可自动发现局域网内的小狮网关信息,加载人脸识别插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可获得对应机构的人脸库，获得人脸库之后可进行人脸操作。
-
-#### dlna扫描发现
-
-![face_mask](images/口罩人脸识别/rasp.png)
-
-### 1. 打开摄像头
-该积木块打开摄像头进行口罩人脸识别。
-
-![face_mask](images/口罩人脸识别/积木块说明/get_video.png)
-
-<br />
-
-### 2. 手机IP摄像头
-该积木块可以获得手机IP摄像头。
-
-![face_mask](images/口罩人脸识别/积木块说明/mobile_video.png)
-
-<br />
-
-### 3. 电脑摄像头
-该积木块可以获得电脑摄像头。
-
-![face_mask](images/口罩人脸识别/积木块说明/compute_video.png)
-
-<br />
-
-### 4. 进行口罩检测
-点击积木块进行口罩检测，检测之前需要打开摄像头。 
-	
-![face_mask](images/口罩人脸识别/积木块说明/start_mask_dete.png)
-
-<br />
-
-### 5. 当识别到人脸数量戴口罩时
-人脸数量包括全部，部分，无人，当检测结果对应到相应的人脸数量时，触发。
-
-![face_mask](images/口罩人脸识别/积木块说明/when_mask_number.png)
-
-<br />
-
-### 6. 检测到未戴口罩人脸
-判断是否有未戴口罩的人，检测到有人没戴口罩，返回true。		
-
-![face_mask](images/口罩人脸识别/积木块说明/dete_no_mask.png)
-
-<br />
-
-### 7. 对未戴口罩人员进行人脸识别
-对没有戴口罩的人员进行人脸识别，返回识别到的结果。		
-
-![face_mask](images/口罩人脸识别/积木块说明/reco_no_mask.png)
-
-<br />
-
-### 8. 口罩检测结果
-口罩检测结果，包括“全体戴口罩”，“部分戴口罩”，“无人戴口罩”三种情况。		
-
-![face_mask](images/口罩人脸识别/积木块说明/mask_result.png)
-
-<br />
-
-### 9. 添加人脸
-添加人脸，将人脸添加到人脸库中。		
-
-![face_mask](images/口罩人脸识别/积木块说明/add_name.png)
-
-<br />
-
-### 10. 当识别到人脸
-在进行对未戴口罩人员进行人脸识别时，若得到结果，则触发。		
-
-![face_mask](images/口罩人脸识别/积木块说明/when_reco_face.png)
-
-<br />
-
-### 11. 识别到的姓名
-对未戴口罩人员进行人脸识别时，所获得的结果。		
-
-![face_mask](images/口罩人脸识别/积木块说明/reco_name.png)
-
-<br />
-
-#### 示例	
-点击使用电脑摄像头，并添加人脸tom，点击绿棋开始口罩检测，当识别到无人戴口罩时，舞台角色说出口罩检测结果，如果检测到有未戴口罩人脸，对未戴口罩人员进行人脸识别。当识别到人脸时，说出识别到的姓名。
-
-![face_mask](images/口罩人脸识别/样例代码/face_mask_sample.png "口罩人脸识别")
-
 ---
-<br />
-
-## 口罩检测
-
-![mask](images/口罩检测/ext_mask.png)
-### 口罩检测介绍			
-	
-	通过口罩检测，判断口罩佩戴情况。
-
-	
-<br />
-
-### 1. 打开摄像头
-该积木块打开摄像头进行口罩检测。
-
-![mask](images/口罩检测/积木块说明/mask_use_video.png)
-
-<br />
-
-### 2. 手机IP摄像头
-该积木块可以获得手机IP摄像头。
-
-![mask](images/口罩检测/积木块说明/mask_ip_video.png)
-
-<br />
-
-### 3. 电脑摄像头
-该积木块可以获得电脑摄像头。
-
-![mask](images/口罩检测/积木块说明/mask_pc_video.png)
-
-<br />
-
-### 4. 进行口罩检测		
-点击积木块进行口罩检测，检测之前需要打开摄像头。	
-
-![mask](images/口罩检测/积木块说明/mask_start_detect.png)
-
-<br />
-
-### 5. 当识别到人脸数量戴口罩时
-人脸数量包括全部，部分，无人，当检测结果对应到相应的人脸数量时，触发。
-
-![mask](images/口罩检测/积木块说明/mask_when_return.png)
-
-<br />
-
-### 6. 检测到人员数量带口罩
-根据选择人脸数量判断判断戴口罩情况，若情况符合返回true。		
-
-![mask](images/口罩检测/积木块说明/mask_detect.png)
-
-<br />
-
-### 7. 口罩检测结果
-口罩检测结果，包括“全体戴口罩”，“部分戴口罩”，“无人戴口罩”三种情况。		
-
-![mask](images/口罩检测/积木块说明/mask_result.png)
-
-<br />
-
-#### 示例
-
-点击使用电脑摄像头，点击绿棋开始口罩检测，当识别到无人戴口罩时，舞台角色说出口罩检测结果为“无人戴口罩”。 	
-
-![mask](images/口罩检测/mask_sample.png)
-
+title: 人工智能
+tags: 
+renderNumberedHeading: true
+grammar_cjkRuby: true
 ---
-<br />
-
 ## 人脸检测
 
-![face_cong](images/人脸检测/ext_face_detect_cog.png)  
-### 人脸检测介绍
-	检测年龄，性别，表情。
-<br />
+|指令     |    功能 |
+| --- | --- |
+|![face detection *=120x50*](./images/人脸检测.png)     |  使用视频侦测模块中的开启摄像头指令，打开电脑摄像头，检测人脸的特征。   |
+|    ![face detection *=150x80*](./images/检测完成触发事件.png) | 当人脸检测完成后，触发对应事件。    |
+|   ![face detection *=200x50*](./images/是否有人判断.png)  |   判断是否检测到人脸，检测到返回值为true，未检测到返回值为false。  |
+| ![face detection *=200x200*](./images/人脸属性.png)    |   通过人脸检测，可以检测到年龄、性别、表情特征。  |
 
+|参考程序 |    说明 |
+| --- | --- |
+|  ![enter description here](./images/人脸检测案例.png)  |  <center>点击绿旗，人脸检测完成后，小度音箱播报检测到的年龄。 </center> |
 
-### 1. 人脸检测
-使用小小创造家插件中视频侦测的摄像头，探测人脸的特征。 
-	
-![face_detect](images/人脸检测/积木块说明/face_start_detect.png)
-
-<br />
-
-### 2. 当检测完成
-在进行人脸检测时，若得到结果，则触发。 
-	
-![face_detect](images/人脸检测/积木块说明/face_when_detect.png)
-
-<br />
-
-
-### 3. 检测到的年龄
-显示识别到的年龄。		
-
-![face_detect](images/人脸检测/积木块说明/face_detect_age.png)
-
-<br />
-
-### 4. 检测到的性别
-显示识别到的性别。	
-	
-![face_detect](images/人脸检测/积木块说明/face_detect_gender.png)
-
-<br />
-
-### 5. 检测到的表情
-显示识别的表情结果。	
-	
-![face_detect](images/人脸检测/积木块说明/face_detect_express.png)
-
-<br />
-
-
-#### 示例	
-开启视频侦测插件中的摄像头，点击绿旗开始检测人脸，当检测到人脸时，舞台角色说出已检测结果的年龄、性别和表情。 	
-
-![face_detect_sample](images/人脸检测/face_detect_sample.png "人脸检测")
-
-
----
-<br />
 
 ## 人脸搜索
+|指令     |    功能 |
+| --- | --- |
+|  ![face recognition *=300x50*](./images/创建人脸组.png) |  首先创建一个人脸组，为添加人脸到组做准备。 人脸组的名称可以自己定义，相同名称的人脸组只需要新建一次。  |
+|  ![face recognition *=300x40*](./images/添加人脸到组.png) | 将人脸添加到提前建好的人脸组中，确保摄像头打开，并正对摄像头。第一个参数填写添加的人脸对应的姓名。第二个参数填写组名。在人脸组中添加过的人脸会被保存。    |
+| ![face recognition *=300x50*](./images/搜索人脸.png)   |  在对应的人脸组里搜索摄像头前的人脸，确保摄像头打开，并正对摄像头 。 |
+|  ![face recognition *=150x70*](./images/搜索完成事件.png)  |   当人脸搜索完成后，执行对应的事件。  |
+| ![face recognition *=200x50*](./images/人脸搜索结果.png)|   返回人脸搜索后得到的姓名。  |
 
-![face_cong](images/人脸搜索/ext_face_search_cog.png)  
-### 人脸搜索介绍
-	将人脸添加到人脸库中，并且进行人脸搜索。
-<br />
-
-
-### 1. 创建人脸组
-创建用户群体组名，可以向群体中添加人脸，搜索人脸会在对应的用户群体中搜索。
-
-![face_search](images/人脸搜索/积木块说明/face_create_group.png)
-<br />
-
-### 2. 添加人脸到组		
-向指定的用户群中添加人脸信息，使用时需将对应的人脸置于摄像机中心。
-
-![face_search](images/人脸搜索/积木块说明/face_add_face_in_group.png)
-
-<br />
-
-### 3. 在指定组中搜索人脸	
-在指定群体中搜索此时摄像头中的人脸在该群体中最相似的人脸名字。	
-
-![face_search](images/人脸搜索/积木块说明/face_search_in_group.png)
-
-<br />
-
-### 4. 当搜索完成
-当搜索请求完成时，触发。
-
-![face_search](images/人脸搜索/积木块说明/face_when_detect.png)
-
-<br />
-	
-
-### 5.搜索到的姓名 
-识别到的用户姓名。 
-
-![face_search](images/人脸搜索/积木块说明/face_search_name.png)
-
-<br />
-
-#### 示例	
-开启视频侦测插件中的摄像头，创建人脸组，添加人脸XiaoMing到组group_1,点击绿旗开始搜索人脸，当搜索到人脸时，舞台角色说出已检测的人脸姓名。 	
-
-![face_detect_sample](images/人脸搜索/face_search_sample.png "人脸搜索")
-
-
----
-<br />
+|参考程序 |    说明 |
+| --- | --- |
+| ![face recognition](./images/人脸搜索案例.png) |  <center>点击绿旗后，在group_1组中搜索人脸，当搜索完成后，如果搜索到的姓名等于自己的名字，小度音箱播报：欢迎回家。 </center> |
 
 ## 人脸关键点
-![faceapi](images/faceapi/ext_faceapi.png)  
-### 人脸关键点介绍
-    通过拖动积木块，实现人脸检测，得到情感置信度，人脸特征坐标，人脸相似度，通过添加人脸部数据，进行人脸识别	
-
-### 积木块说明
-### 1. 打开(关闭)摄像头
-打开(关闭)摄像打开，进入插件摄像头自动打开。  
-![faceapi](images/faceapi/积木块说明/faceapi_video.png "faceapi积木块1")  
-<br />
-
-### 2. 视频透明度设置
-可以设置视频的透明度，默认为50。  
-![faceapi](images/faceapi/积木块说明/faceapi_video2.png "faceapi积木块2")  
-<br />
-
-### 3. 单人人脸检测
-点击积木块可以进行单人的人脸检测。  
-![faceapi](images/faceapi/积木块说明/faceapi_single_facede.png "faceapi积木块3") 
-<br />
- 
-#### 示例   
-点击小旗子运行积木块，进行人脸检测，所用模型是tiny模型，保证脸部所有特征位置出现在镜头中。   
-![echart](images/faceapi/样例代码/faceapi_sample_1.png "faceapi示例1")  
-<br />
-
-### 4. 停止检测 
-停止人脸检测。  
-![faceapi](images/faceapi/积木块说明/faceapi_facede_stop.png "faceapi积木块4")
-<br />
- 
-#### 示例  
-点击小绿旗，停止人脸检测。    
-![faceapi](images/faceapi/样例代码/faceapi_sample_2.png "faceapi示例2") 
-<br />
-
-### 5. 表情自信度
-得到愤怒，厌恶，担心，快乐，中立，伤心，惊讶表情的自信度。  
-![faceapi](images/faceapi/积木块说明/faceapi_expre.png "faceapi积木块5") 
-<br /> 
-
-#### 示例  
-点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出快乐自信度的值。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_3.png "faceapi示例3")
-<br />
-
-### 6. 脸部特征的值
-得到鼻尖,鼻根,下巴,左眼外角,左眼内角,右眼外角,右眼内角,嘴中心,嘴左角,嘴右角,左脸最外,右脸最外的X,Y坐标值
-![faceapi](images/faceapi/积木块说明/faceapi_XY.png "faceapi积木块6")  
-<br />
-
-#### 示例 
-点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出脸部鼻尖的X坐标值。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_4.png "faceapi示例4")
-<br />
-
-### 7. 人脸相似度
-得到人脸相似度的值。   
-![faceapi](images/faceapi/积木块说明/faceapi_simi.png "faceapi积木块7")  
-<br />
-
-#### 示例 
-点击小绿旗，开启人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出人脸相似度值。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_5.png "faceapi示例5")
-<br />
-
-### 8. 添加人脸进行人脸识别
-输入名称,添加带名称的数据到匹配组。  
-![faceapi](images/faceapi/积木块说明/faceapi_add.png "faceapi积木块8")  
-<br />
-
-### 9. 开始人脸识别 
-对出现在摄像头的人脸进行人脸识别。   
-![faceapi](images/faceapi/积木块说明/faceapi_start_rege.png "faceapi积木块9") 
-<br />
-
-### 10. 识别结果 
-得到出现在摄像头的人脸名称。   
-![faceapi](images/faceapi/积木块说明/faceapi_result.png "faceapi积木块10")
-<br />  
-
-#### 示例  
-点击添加人脸[alla]进行人脸识别积木块，添加完成后，点击小绿旗，开启人脸识别，当人脸识别打开，重复执行说出识别结果。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_6.png "faceapi示例6")
-<br />
-
-### 11. 当时识别到 
-当返回识别结果是被触发。   
-![faceapi](images/faceapi/积木块说明/faceapi_when.png "faceapi积木块11")
-<br />  
-
-#### 示例  
-点击添加人脸[alla]进行人脸识别积木块，添加完成后，点击小绿旗，开启人脸识别，当识别到是alla时，说出识别结果。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_7.png "faceapi示例7")
-<br />
-
-### 12. 多人人脸检测 
-进行多人人脸检测。     
-![faceapi](images/faceapi/积木块说明/faceapi_all_facede.png "faceapi积木块12")  
-<br /> 
-
-### 13. 多人检测数据 
-获取多人检测数据。    
-![faceapi](images/faceapi/积木块说明/faceapi_all_result.png "faceapi积木块13")   
-<br />
-
-#### 示例  
-点击小绿旗，开启多人人脸检测，当人脸检测打开，发送消息1，当接受到消息1时，重复执行说出多人检测数据。   
-![faceapi](images/faceapi/样例代码/faceapi_sample_8.png "faceapi示例8")
-
-
----  
-<br />
-
-## 语音识别
-
-![speech](images/语音识别/ext_voice_cog.png)
-### 语音识别介绍			
-	
-	语音输入，语音识别。
-
-	
-<br />
-
-### 1. 请入语音输入	
-
-通过电脑麦克风输入语音，点击输入语音，可以选择语音输入的时间，默认输入时间为5秒。	
-
-![speech](images/语音识别/积木块说明/voice_open.png)
-
-<br />
-
-### 2. 当语音识别返回结果积木（含特定词语）		
-当识别到语音中包含给定词语时执行，默认包含“开始”。
-
-![speech](images/语音识别/积木块说明/voice_get_result_specific.png)
-
-<br />
-
-### 3. 当语音识别返回结果
-当识别语音结束时执行。	
-
-![speech](images/语音识别/积木块说明/voice_get_result.png)
-
-<br />
-
-
-### 4. 语音识别结果积木		
-输出输入的语音结果。	
-
-![speech](images/语音识别/积木块说明/voice_result.png)
-
-<br />
-
-
-#### 示例		
-点击小旗子,当听到输入的语音中包含开始时，舞台中角色说出输入语音结果。	
-
-![speech](images/语音识别/代码案例/voice_result_sample.png)
-
-
----
-<br />
-
-## 文字朗读
-
-![text_speech](images/文字朗读/ext_voice_cog.png)
-### 文字朗读介绍			
-	
-	控制文字朗读的音色，音量，音高，速度。
-
-	
-<br />
-
-### 1. 选择朗读人物	
-
-选择不同的朗读人物(小燕，许久，小萍，许小宝，小婧)进行朗读。	
-
-![text_speech](images/文字朗读/积木块说明/voice_character.png)
-
-<br />
-
-### 2. 朗读音量		
-设置朗读音量，默认值为50。
-
-![text_speech](images/文字朗读/积木块说明/voice_strong.png)
-
-<br />
-
-### 3. 朗读音高
-设置朗读音高，默认值为50。	
-
-![text_speech](images/文字朗读/积木块说明/voice_high.png)
-
-<br />
-
-
-### 4. 朗读速度		
-设置朗读音高，默认值为50。	
-
-![text_speech](images/文字朗读/积木块说明/voice_speed.png)
-
-<br />
-
-### 5. 朗读输入内容		
-朗读输入文本，默认值为“你好呀”。	
-
-![text_speech](images/文字朗读/积木块说明/voice_text.png)
-
-<br />
-
-#### 示例
-
-点击小旗子，设置朗读人物为许小宝，朗读音量为50，朗读音高为50，朗读速度为50，朗读内容为”你好呀“。	
-
-![text_speech](images/文字朗读/代码案例/voice_text_sample.png)
-
----
-<br />
-
-## 离线语音技术
-
-![offline_speech](images/离线语音技术/ext_offline_voice_cog.png)
-### 离线语音技术介绍			
-	
-	支持离线唤醒和离线播报，播报支持多种人物音色。
-
-	
-<br />
-
-### dlna设备发现说明  
-	
-	dlna可自动发现局域网内的小狮网关信息,加载人脸识别插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可获得对应机构的人脸库，获得人脸库之后可进行人脸操作。
-
-#### dlna扫描发现
-
-![offline_speech](images/离线语音技术/rasp.png)
-### 1. 当唤醒时	
-
-对着小狮网关说出指定唤醒词，可触发积木块。	
-
-![offline_speech](images/离线语音技术/积木块说明/when_wake.png)
-
-<br />
-
-### 2. tts人物		
-可选择不同的人物(小燕，小峰，楠楠，小强，小蓉，小梅)来播报内容。
-
-![offline_speech](images/离线语音技术/积木块说明/tts_character.png)
-
-<br />
-
-### 3. tts文字转语音
-将输入的文本内容进行播报。	
-
-![offline_speech](images/离线语音技术/积木块说明/voice_txt.png)
-
-<br />
-
-#### 示例
-
-对着小狮盒子说出唤醒词，客户端通过小燕的声音说出“你好呀”。	
-
-![offline_speech](images/离线语音技术/代码案例/offline_voice_sample.png)
-
----
-<br />
-
-
-## 身体姿态检测
-
-![posenet](images/posenet/ext_posenet.png)
-### 身体姿态检测介绍			
-	
-	支持离线唤醒和离线播报，播报支持多种人物音色。
-
-	
-<br />
-
-### 1. 打开(关闭)摄像头
-打开(关闭)摄像打开，进入插件摄像头自动打开。  
-![posenet](images/posenet/积木块说明/posenet_open_video.png "posenet积木块1")  
-<br />
-
-### 2. 视频透明度设置
-可以设置视频的透明度，默认为50。  
-![posenet](images/posenet/积木块说明/posenet_transparency.png "posenet积木块2")  
-<br />
-
-### 3. 身体姿态检测(单人)
-点击积木块可以进行单人的身体姿态检测。  
-![posenet](images/posenet/积木块说明/posenet_single_detection.png "posenet积木块3") 
-<br />
-
-### 4. 停止检测 
-停止身体姿态检测。  
-![posenet](images/posenet/积木块说明/posenet_stop_detection.png "posenet积木块4")
-<br />
-
-### 5. 身体关键点的X，Y值 
-获得身体关键点(鼻子，左眼，右眼，左耳，右耳，左肩，右键，左手肘，右手肘，左手腕，右手腕，左臀，右臀，左膝，右膝，左脚踝，右脚踝)。  
-![posenet](images/posenet/积木块说明/posenet_key_point.png "posenet积木块4")
-<br />
-
-#### 示例   
-点击身体姿态检测(单人)，等到弹出检测成功小框后，点击小绿旗，重复执行10次，说出身体关键点鼻子的X值，然后停止检测。   
-![posenet](images/posenet/样例代码/posenet_sample_1.png "posenet示例1")  
-<br />
-
-### 6. 身体姿态检测(多人)
-点击积木块可以进行多人的身体姿态检测。  
-![posenet](images/posenet/积木块说明/posenet_all_detection.png "posenet积木块6")
-<br />
-
-### 7. 多人检测数据 
-获得多人身体检测的数据结果。  
-![posenet](images/posenet/积木块说明/posenet_all_result.png "posenet积木块7")
-<br />
-
-#### 示例   
-点击身体姿态检测(多人)，等到弹出检测成功小框后，点击小绿旗，重复执行10次，说出多人检测数据，然后停止检测。   
-![posenet](images/posenet/样例代码/posenet_sample_2.png "posenet示例2")  
-
----
-<br />
-
-## 图像识别
-
-![image_recognition](images/图像识别/ext_recog.png)
-### 图像识别介绍			
-	
-	该插件可以对摄像头的传入的图像进行类别识别。
-	
-<br />
-
-### 1. 电脑摄像头
-该积木块与使用摄像头积木块一起使用，可使用电脑摄像头进行图像智能识别。
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_computer_camera.png)
-
-<br />
-
-### 2. 手机IP摄像头
-该积木块与用摄像头积木块一起使用，可使用手机IP摄像头进行图像智能识别。
-	
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_ip_camera.png)
-
-<br />
-
-### 3.使用摄像头		
-选择不同的摄像头输入，进行图像智能识别。
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_choose_camera.png)
-
-<br />
-
-### 4. 图像识别 类别		
-对图像进行分类识别，可支持识别种类有：主体，场景。
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_image.png)
-
-<br />
-
-### 5. 当识别完成积木块
-当图像识别请求完成时，触发。
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_when_recognition.png)
-<br />
-
-### 6. 图像识别结果积木块
-调用图像识别积木块请求完成后返回的图像识别结果。
-
-![image_recognition](images/图像识别/积木块说明/image_recognition_image_result.png)
-
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头进行图像识别，将要识别的物体放到电脑摄像头前，舞台角色说出识别结果。	
-
-![image_recognition](images/认知能力/样例代码/image_recognition_sample.png "image_recognition")
-
----
-<br />
+|指令     |    功能 |
+| --- | --- |
+| ![keypoint *=150x50*](./images/人脸关键点检测.png)|    启动人脸关键点检测功能，确保摄像头打开，人脸位于摄像头前。|
+|![keypoint *=150x50*](./images/停止检测.png) |   停止人脸关键点检测功能，舞台区人脸关键点会消失。 |
+|![keypoint *=150x30*](./images/表情自信值_1.png)|置信度，获取当前人脸最可能的表情可信度。
+| ![keypoint *=200x30*](./images/关键部位位置.png)| 获取鼻尖,鼻根,下巴,左眼外角,左眼内角,右眼外角,右眼内角,嘴中心,嘴左角,嘴右角,左脸最外,右脸最外的X,Y坐标值。   |
+|![keypoint *=200x40*](./images/表情结果判断.png)|  判断人脸表情。  |
+|![keypoint *=150x40*](./images/表情结果值_1.png)|  获取人脸表情值结果。  |
+  |![keypoint *=150x40*](./images/人脸相似度.png)|   获取当前检测是人脸的可能性。 |
+  
+  |参考程序 |    说明 |
+| --- | --- |
+|![keypoint](./images/关键点位置案例.png)|  <center>人脸关键点检测完成后，实现角色跟随鼻尖上下移动。 </center> |
+|![keypoint](./images/关键点表情案例.png)|  <center>人脸关键点检测完成后，利用检测到的表情值做判断，当表情值是愤怒时，小度音箱播报：笑一笑，十年少。 </center> |
+  
+  ## 语音识别
+  |指令     |    功能 |
+| --- | --- |
+| ![speech recognition *=150x40*](./images/语音输入.png) |  需要语音输入时使用，参数输入时长可以根据情况更改。 |
+|![speech recognition *=200x80*](./images/当识别到语音事件.png) | 当识别任意语音后，执行对应的事件。  |
+| ![speech recognition *=200x80*](./images/当听到指定语音事件.png) |  当识别到规定的语音后，执行对应的事件。 |
+|![speech recognition *=150x40*](./images/语音结果.png)  |  获取语音识别的结果。 |
+
+ |参考程序 |    说明 |
+| --- | --- |
+|![speech recognition](./images/语音识别案例.png)|  <center>点击绿旗后，语音输入：转起来，输入时间为3秒。当识别到正确的内容后，角色右转一圈。 </center> |
+
+## 口罩检测
+  |指令     |    功能 |
+| --- | --- |
+|![mask *=200x50*](./images/规定使用摄像头.png) |  选择摄像头。 |
+| ![mask *=300x50*](./images/手机摄像头.png)| 使用手机摄像头。 |
+|  ![mask *=150x50*](./images/电脑摄像头.png)|  使用电脑摄像头。 |
+| ![mask *=120x50*](./images/口罩检测.png) | 进行口罩检测，检测前需要确保摄像头打开。  |
+|![mask *=200x50*](./images/口罩人数触发事件.png) |  口罩检测完成后，识别到对应的戴口罩人数时，触发事件。可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。 |
+|![mask *=300x50*](./images/口罩人数检测条件.png) | 口罩检测完成后，用来判断当前戴口罩的人数，可选的参数有：全体戴口罩、部分戴口罩、无人戴口罩。  |
+| ![mask *=150x50*](./images/口罩结果.png)|  获取口罩检测的结果，可能的结果有：全体戴口罩、部分戴口罩、无人戴口罩。 |
+|![mask *=150x50*](./images/人脸个数.png) |获取口罩检测时的人脸个数。   |
+
+ |参考程序 |    说明 |
+| --- | --- |
+|![enter description here](./images/口罩检测案例.png)|  <center>点击绿旗后，进行口罩检测，当检测结果为全体戴口罩时，显示“全体戴口罩”。 </center> |
 
 ## 文字识别
+|指令     |    功能 |
+| --- | --- |
+|![character recognition *=200x50*](./images/选择摄像头文字识别.png)|  选择摄像头。 |
+|![character recognition  *=150x50*](./images/电脑摄像头文字识别.png)|  选择电脑摄像头。 |
+|![character recognition *=300x50* ](./images/手机摄像头文字识别.png)|  选择手机摄像头。 |
+|![character recognition *=200x50*](./images/文字识别.png)|  进行文字识别，注意需要打开摄像头镜像模式，才能识别出正确的结果。 |
+|![character recognition *=200x50*](./images/车牌识别.png)|进行车牌识别，需使用真实的车牌或车牌图片进行识别 。  |
+|![character recognition *=180x80*](./images/文字识别事件.png)|   当文字识别或车牌识别完成后，触发对应的事件。|
+|![character recognition *=150x50*](./images/文字识别结果.png)| 获取文字识别的结果。  |
+|![character recognition *=150x50*](./images/车牌识别结果.png)|   获取车牌识别的结果。|
 
-![txt_recognition](images/文字识别/ext_txt_reco_cog.png)
-### 文字识别介绍			
-	
-	该插件可以对不同摄像头的传入的图像进行文字识别。
-	
-<br />
-
-### 1. 电脑摄像头	
-该积木块与使用摄像头积木块一起使用，可使用电脑摄像头进行文字识别。
-
-![txt_recognition](images/文字识别/积木块说明/txt_pc_video.png)
-
-<br />
-
-### 2. IP摄像头积木块
-该积木块与使用摄像头积木块一起使用，可使用手机IP摄像头进行文字识别。
-	
-
-![txt_recognition](images/文字识别/积木块说明/txt_ip_video.png)
-
-<br />
-
-### 3.选择摄像头积木块		
-选择不同的摄像头输入，进行文字识别。
-
-![txt_recognition](images/文字识别/积木块说明/txt_use_video.png)
-
-<br />
-
-### 4. 文字识别类型
-对图像内的文字信息进行识别，可支持识别种类有：通用文字，手写字。
-
-![txt_recognition](images/文字识别/积木块说明/txt_reco.png)
-<br />
-
-### 5. 卡牌文字识别
-对卡牌文字信息进行识别，可支持识别种类有：车牌。
-
-![txt_recognition](images/文字识别/积木块说明/txt_card_reco.png)
-<br />
-
-### 6. 当识别完成积木块
-当图像识别请求完成时，触发。
-
-![txt_recognition](images/文字识别/积木块说明/txt_when_ok.png)
-<br />
-
-### 7. 文字识别结果		
-调用文字识别积木块请求完成后返回的文字识别结果。
-
-![txt_recognition](images/文字识别/积木块说明/image_recognition_ocr_result.png)
-
-<br />
-
-### 7. 卡牌文字识别结果		
-调用卡牌识别积木块请求完成后返回的卡牌文字识别结果。
-
-![txt_recognition](images/文字识别/积木块说明/txt_card_result.png)
-
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行文字识别，将要识别的物体放到电脑摄像头前，当识别完成时，舞台角色说出识别结果。	
-
-![txt_recognition](images/文字识别/样例代码/txt_recognition_sample1.png "txt_recognition")
-
----
-<br />
+ |参考程序 |    说明 |
+| --- | --- |
+|![enter description here](./images/文字识别案例.png)|  <center>点击绿旗后，使用电脑摄像头进行文字识别，当文字识别完成后，如果识别的结果为cat，那么播放cat音效。</center> |
 
 ## 手势识别
+|指令     |    功能 |
+| --- | --- |
+|![gesture recognition *=200x50*](./images/选择摄像头文字识别.png)|  选择摄像头。 |
+|![gesture recognition   *=150x50*](./images/电脑摄像头文字识别.png)|  选择电脑摄像头。 |
+|![gesture recognition  *=300x50* ](./images/手机摄像头文字识别.png)|  选择手机摄像头。
+|![gesture recognition  *=140x60* ](./images/手势识别.png)|进行手势识别，确保摄像头打开。  |
+|![gesture recognition  *=150x50* ](./images/手势识别结果.png)| 获取手势识别的结果。 |
+|![gesture recognition  *=130x60*](./images/手势识别事件.png)| 当手势识别完成后，触发对应的事件。 |
 
-![hand_recognition](images/手势识别/ext_hand_reco_cog.png)
-### 手势识别介绍			
-	
-	该插件可以对不同摄像头的传入的图像进行手势识别。
-	
-<br />
-
-### 1. 电脑摄像头	
-该积木块与使用摄像头积木块一起使用，可使用电脑摄像头进行手势识别。
-
-![hand_recognition](images/手势识别/积木块说明/hand_pc_video.png)
-
-<br />
-
-### 2. IP摄像头积木块
-该积木块与使用摄像头积木块一起使用，可使用手机IP摄像头进行手势识别。
-	
-
-![hand_recognition](images/手势识别/积木块说明/hand_ip_video.png)
-
-<br />
-
-### 3. 选择摄像头积木块		
-选择不同的摄像头输入，进行手势识别。
-
-![hand_recognition](images/手势识别/积木块说明/hand_use_video.png)
-
-<br />
-
-### 4. 手势识别
-对图像内的手势进行识别。
-
-![hand_recognition](images/手势识别/积木块说明/hand_use_reco.png)
-<br />
-
-### 5. 当识别完成积木块
-当手势识别请求完成时，触发。
-
-![hand_recognition](images/手势识别/积木块说明/hand_when_ok.png)
-<br />
-
-### 6. 手势识别结果		
-调用手势识别积木块请求完成后返回的手势识别结果。
-
-![hand_recognition](images/手势识别/积木块说明/hand_result.png)
-
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行手势识别，当识别到“ok”手势时，语音播报“OK”。。	
-
-![hand_recognition](images/手势识别/样例代码/hand_recognition_sample.png "hand_recognition")
-
----
-<br />
+ |参考程序 |    说明 |
+| --- | --- |
+|![enter description here](./images/手势案例.png)|  <center>点击绿旗后，使用电脑摄像头进行手势识别，识别完成后，判断如果是ok的手势，LED彩光灯打开。</center> |
 
 ## 图像分类
-
-![image_class](images/图像分类/ext_image_class.png)
-### 图像分类介绍			
-	
-	该插件可以对图像进行学习，分类。
-	
-<br />
-
-### 1. 打开图像窗口	
-点击打开图像窗口，打开训练窗口。可修改分类名称，来确定分类名。通过点击学习按钮，训练该分类，将信心值训练到100%，多换几个位置，确保数据的正确性。 
-
-![image_class](images/图像分类/积木块说明/open_image_window.png)   
-![image_class](images/图像分类/积木块说明/image_window.png)
-
-<br />
-
-### 2. 背景信心
-获得指定分类信心值。
-
-![image_class](images/图像分类/积木块说明/image_confidence.png)
-
-<br />
-
-### 3. 识别结果		
-信心值最大的分类为识别结果。
-
-![image_class](images/图像分类/积木块说明/image_result.png)
-
-<br />
-
-### 4. 判断识别结果
-判断识别结果是否为指定分类，若是，返回true。
-
-![image_class](images/图像分类/积木块说明/image_is_result.png)
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行手势识别，当识别到“ok”手势时，语音播报“OK”。。	
-
-![image_class](images/图像分类/样例代码/image_class_sample.png "image_class")
----
-<br />
-
-## 身体姿态分类
-
-![posenet_class](images/身体姿态分类/ext_image_class.png)
-### 身体姿态分类介绍			
-	
-	该插件可以对图像进行学习，分类。
-	
-<br />
-
-### 1. 打开身体姿态窗口	
-点击打开图像窗口，打开训练窗口。可修改分类名称，来确定分类名。通过点击学习按钮，训练该分类，将信心值训练到100%，多换几个位置，确保数据的正确性。 
-
-![posenet_class](images/身体姿态分类/积木块说明/open_posenet_window.png)    
-![posenet_class](images/身体姿态分类/积木块说明/posenet_window.png)
-
-<br />
-
-### 2. 背景信心
-获得指定分类信心值。
-
-![posenet_class](images/身体姿态分类/积木块说明/posenet_confidence.png)
-
-<br />
-
-### 3. 识别结果		
-信心值最大的分类为识别结果。
-
-![posenet_class](images/身体姿态分类/积木块说明/posenet_result.png)
-
-<br />
-
-### 4. 判断识别结果
-判断识别结果是否为指定分类，若是，返回true。
-
-![posenet_class](images/身体姿态分类/积木块说明/posenet_is_result.png)
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行手势识别，当识别到“ok”手势时，语音播报“OK”。。	
-
-![posenet_class](images/身体姿态分类/样例代码/posenet_class_sample.png "posenet_class")
----
-<br />
-
-## 声音分类
-
-![speech_class](images/声音分类/ext_speech_class.png)
-### 声音分类介绍			
-	
-	该插件可以对图像进行学习，分类。
-	
-<br />
-
-### 1. 打开声音窗口	
-点击打开声音分类窗口，打开训练窗口。添加要训练的分类。通过点击分类名添加声音样本，每个分类的样本不能少于4个，分类样本收集完后，点击转移学习，转移学习完成后，点击开始识别。 
-
-![speech_class](images/声音分类/积木块说明/open_speech_window.png)   
-![speech_class](images/声音分类/积木块说明/speech_window.png)
-
-<br />
-
-### 2. 背景信心
-获得指定分类信心值。
-
-![speech_class](images/声音分类/积木块说明/speech_confidence.png)
-
-<br />
-
-### 3. 识别结果		
-信心值最大的分类为识别结果。
-
-![speech_class](images/声音分类/积木块说明/speech_result.png)
-
-<br />
-
-### 4. 判断识别结果
-判断识别结果是否为指定分类，若是，返回true。
-
-![speech_class](images/声音分类/积木块说明/speech_is_result.png)
-<br />
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行手势识别，当识别到“ok”手势时，语音播报“OK”。	
-
-![speech_class](images/声音分类/样例代码/speech_class_sample.png "speech_class")
-
-<!-- ## 百度人脸识别
-
-![baidu](images/百度人脸识别/ext_baidu_face_recognition.png)
-### 百度人脸识别介绍			
-	
-	使用百度在线API,进行人脸检测和识别,使用前需使用视频侦测插件打开摄像头。
-
-	
-<br />
-
-### 1. 人脸检测积木块	
-使用该积木块可以检测舞台上的显示的人脸的特征，包括表情，性别，年龄。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_detect.png)
-
-<br />
-
-### 2. 当检测完成积木块
-当检测人脸请求返回时，触发。	
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_when_detect.png)
-
-<br />
-
-### 3.年龄积木块		
-检测到的年龄信息。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_age.png)
-
-<br />
-
-### 4. 性别积木块		
-检测到的性别信息。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_sex.png)
-
-<br />
-
-### 5. 表情积木块
-检测到的表情信息。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_emoji.png)
-
-<br />
-
-### 6. 创建用户组积木块
-创建用户群体群名，可以向群体中添加人脸，搜索人脸会在对应的用户群体中搜索。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_create_group.png)
-<br />
-
-### 7. 添加人脸积木块		
-向指定的用户群中添加人脸信息，使用时需将对应的人脸置于摄像机中心。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_add_face.png)
-
-<br />
-
-### 8. 搜索人脸积木块		
-在指定群体中搜索此时摄像头中的人脸在该群体中最相似的人脸名字，如果置信度小于70%，将不会返回信息。	
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_search.png)
-
-<br />
-
-### 9. 当识别到积木块
-当搜索请求完成时，触发。
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_when_recognition.png)
-
-<br />
-
-### 10. 姓名积木块
-识别到的用户姓名
-
-![baidu](images/百度人脸识别/积木块说明/baidu_face_name.png)
-
-#### 示例	
-开启摄像头并循环进行人脸检测，当检测到人脸时，说出检测到的年龄，性别，表情并进行人脸搜索，当识别到人脸时，说出人脸对应的名字。
-![baidu](images/百度人脸识别/样例代码/baidu_face_sample.png "baidu")
-
----
-
-<br /> -->
-
-<!-- ## 智能识别
-
-![image_recognition](images/认知能力/ext_recog.png)
-### 智能识别介绍			
-	
-	该插件可以对不同摄像头的传入的图像进行类别识别，人体识别，文字识别，及对传入的人脸进行动漫化处理。
-	
-<br />
-
-### 1. 电脑摄像头积木块	
-该积木块与选择积木块一起使用，可使用电脑摄像头进行图像智能识别。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_computer_camera.png)
-
-<br />
-
-### 2. IP摄像头积木块
-该积木块与选择积木块一起使用，可使用手机IP摄像头进行图像智能识别。
-	
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_ip_camera.png)
-
-<br />
-
-### 3.选择摄像头积木块		
-选择不同的摄像头输入，进行图像智能识别。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_choose_camera.png)
-
-<br />
-
-### 4. 图像识别积木块		
-对图像进行分类识别，可支持识别种类有：主体，蔬菜，动物，植物，车型，车辆侦测，菜品等。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_image.png)
-
-<br />
-
-### 5. 图像识别结果积木块
-调用图像识别积木块请求完成后返回的图像识别结果。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_image_result.png)
-
-<br />
-
-### 6. 文字识别积木块
-对图像内的文字信息进行识别，可支持识别种类有：通用文字，手写字，印刷文字等。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_ocr.png)
-<br />
-
-### 7. 文字识别结果积木块		
-调用文字识别积木块请求完成后返回的文字识别结果。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_ocr_result.png)
-
-<br />
-
-### 8. 人体识别积木块		
-对图像内的人体进行识别，返回人体信息，可支持识别种类有：人体关键点识别，手势识别等。
-
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_gesture.png)
-
-<br />
-
-### 9. 人体识别结果积木块
-调用人体识别积木块请求完成后返回的人体识别结果。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_gesture_result.png)
-
-<br />
-
-### 10. 当识别完成积木块
-当图像识别请求完成时，触发。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_when_recognition.png)
-<br />
-
-### 11. 人脸动漫化积木块
-对图像内的人的头像进行动漫化处理，将处理后的图像返回到舞台上。
-
-![image_recognition](images/认知能力/积木块说明/image_recognition_animal.png)
-
-#### 示例	
-当绿旗被点击，会打开并使用电脑摄像头循环进行手势识别，当识别到“ok”手势时，语音播报“OK”,当识别到“拳头”时，语音播报“握紧拳头”。	
-
-![image_recognition](images/认知能力/样例代码/image_recognition_sample.png "image_recognition")
-
-		
----  
-
-## 身体姿态检测
-![faceapi](images/faceapi/ext_faceapi.png)  
-### 身体姿态检测介绍
-    通过拖动积木块，实现身体姿态检测，得到身体关键点的坐标，同时还能进行多人检测	
-
-### 积木块说明
-### 1. 打开(关闭)摄像头
-打开(关闭)摄像打开，进入插件摄像头自动打开。  
-![posenet](images/posenet/积木块说明/posenet_open_video.png "posenet积木块1")  
-
-### 2. 视频透明度设置
-可以设置视频的透明度，默认为50。  
-![posenet](images/posenet/积木块说明/posenet_transparency.png "posenet积木块2")  
-
-### 3. 身体姿态检测(单人)
-点击积木块可以进行单人的身体姿态检测检测。  
-![posenet](images/posenet/积木块说明/posenet_single_detection.png "posenet积木块3") 
- 
-### 样例代码   
-点击小旗子运行积木块，进行身体姿态检测，身体部位的特征点出现在镜头中。   
-![posenet](images/posenet/样例代码/posenet_simple_1.png "posenet示例1")  
-
-### 4. 停止检测 
-停止身体姿态检测。  
-![posenet](images/posenet/积木块说明/posenet_stop_detection.png "posenet积木块4")
- 
-### 样例代码  
-点击空格，停止身体姿态检测。    
-![posenet](images/posenet/样例代码/posenet_simple_2.png "posenet示例2") 
-
-### 5. 身体关键点的值
-鼻子,左眼，右眼,左耳,右耳,左肩,右肩,左手肘,右手肘,左手腕,右手腕,左臀,右臀,左膝,右膝,左脚踝,右脚踝的x,y值。    
-![posenet](images/posenet/积木块说明/posenet_key_point.png "posenet积木块5")  
-
-### 样例代码  
-点击小绿旗，开启身体姿态检测，当检测开始，发送消息1，当接受到消息1时，重复执行说出鼻子x轴。   
-![posenet](images/posenet/样例代码/posenet_simple_3.png "posenet示例3")
-
-### 6. 身体姿态检测(多人) 
-进行多人身体姿态检测。     
-![posenet](images/posenet/积木块说明/posenet_all_detection.png "posenet积木块6")   
-
-### 7. 多人检测数据 
-获取多人检测数据。    
-![posenet](images/posenet/积木块说明/posenet_all_result.png "posenet积木块7")   
-
-### 样例代码  
-点击小绿旗，开启多人身体姿态检测，当检测打开，发送消息1，当接受到消息1时，重复执行说出多人检测数据。   
-![posenet](images/posenet/样例代码/posenet_simple_4.png "posenet示例4") -->
-
-
