--- a/docs/智能家居.md
+++ b/docs/智能家居.md
@@ -2,90 +2,54 @@
 
 > ![xxczj](./extensions.png)
 # 智能家居模块
-	包含米家智能家居、泥巴机器人、机器学习等10余种人工智能软、硬件积木插件。	
-	基于米家智能家居套件，让儿童充分体验空间编程。该插件基于dlna设备发现功能去获取自配置的小狮网关IP。
-
----
-## 米家智能家居套装  
-	
-	包括米家智能网关、无线开关、人体红外、门窗传感器、智能插座几种智能家居常用的智能硬件设备。 
-	 
-![smart_home](images/智能家居/硬件说明/小米智能家居套装.png)
-
-米家智能网关
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-网关.png)
-	
-	网关作用，用来自动检测网关下的所有设备并通信。
-
-无线开关
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-无线开关.png)
-	
-	开关作用，按下即动作，松开释放。在教学场景中可以用来作为开关按键控制。
-
-人体红外
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-人体红外.png)
-
-	人体红外作用，用来探测是否有人经过。频率为一分钟探测一次。
-
-门窗传感器
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-门窗传感器.png)
-
-	门窗传感器作用，用来感应门窗的打开和闭合。
-
-智能插座
-
-![smart_home](images/智能家居/硬件说明/米家家居套装-智能插座.png)
-
-	智能插座作用，用来将插入的识别智能化。
-
-## 魔方控制器
-![smart_home](images/智能家居/硬件说明/魔方.png)
-
-	魔方控制器是一款基于动作感应的智能无线控制器，识别6种控制动作。分别是：
-	- 摇一摇
-	- 敲两下
-	- 翻转90°
-	- 翻转180°
-	- 平面旋转
-	- 推一推
-	这些动作单个使用或者组合起来使用，在教学场景中可以用来作为密码锁，或者开关使用。  
-
-<br />
-
-## dlna设备发现说明  
-	
-	dlna可自动发现局域网内的小狮网关信息,加载智能家居插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可与小狮网关建立连接。进行相应的智能硬件操作。
-
-### dlna扫描发现
-
-![smart_home](images/智能家居/smart_home_dlna_scan.png)
-
 ## 小米网关灯
 
-|   指令  |  功能   |  案例   |  参考程序   |
-| --- | --- | --- | --- |
-|![smart home](./images/网关灯开关.png)|  将网关灯打开或关闭 。  | 当响度大于30时，网关灯打开，过一会熄灭。    | ![smart home](./images/网关灯开关案例.png)   |
-| ![smart home](./images/网关灯亮度.png) | 改变网关灯亮度。    | 按下左移键，网关灯亮度较暗；按下右移键，网关灯亮度较亮。    |![smart home](./images/网关灯亮度案例.png) |
-|![smart home](./images/网关灯颜色.png) |  将网关灯的颜色改为指定颜色。   |   网关灯的颜色每一秒变化一次。  |![smart home](./images/网关灯颜色案例.png)  |
-|![smart home](./images/网关灯RGB.png)|  通过修改RGB的值改变网关灯的颜色。 |将网关灯的颜色调整为最绿色。| ![smart home](./images/网关灯RGB最绿色.png)|
+| 指令                                   | 功能                              | 案例                                                     | 参考程序                                    |
+| -------------------------------------- | --------------------------------- | -------------------------------------------------------- | ------------------------------------------- |
+| ![smart home](./images/网关灯开关.png) | 将网关灯打开或关闭 。             | 当响度大于30时，网关灯打开，过一会熄灭。                 | ![smart home](./images/网关灯开关案例.png)  |
+| ![smart home](./images/网关灯亮度.png) | 改变网关灯亮度。                  | 按下左移键，网关灯亮度较暗；按下右移键，网关灯亮度较亮。 | ![smart home](./images/网关灯亮度案例.png)  |
+| ![smart home](./images/网关灯颜色.png) | 将网关灯的颜色改为指定颜色。      | 网关灯的颜色每一秒变化一次。                             | ![smart home](./images/网关灯颜色案例.png)  |
+| ![smart home](./images/网关灯RGB.png)  | 通过修改RGB的值改变网关灯的颜色。 | 将网关灯的颜色调整为最绿色。                             | ![smart home](./images/网关灯RGB最绿色.png) |
 ## 小度音箱
 
-|    指令 | 功能    |  案例   |参考程序     |
-| --- | --- | --- | --- |
-|  ![smart home](./images/小度音箱播报.png) |    可以规定小度音箱语音播报的内容。 |  当网关灯亮起时，小度音箱播报“欢迎光临”。|  ![smart home](./images/小度音箱“欢迎光临”.png) |
+| 指令                                     | 功能                             | 案例                                     | 参考程序                                       |
+| ---------------------------------------- | -------------------------------- | ---------------------------------------- | ---------------------------------------------- |
+| ![smart home](./images/小度音箱播报.png) | 可以规定小度音箱语音播报的内容。 | 当网关灯亮起时，小度音箱播报“欢迎光临”。 | ![smart home](./images/小度音箱“欢迎光临”.png) |
 
 ## 小米开关
-|    指令 | 功能    |  案例   |参考程序     |
-| --- | --- | --- | --- |
-|![smart home](./images/开关触发事件.png)|    当触发开关对应的动作时，执行对应事件。 | 当开关长按时，角色右转一段时间|   ![enter description here](./images/开关长按触发旋转.png)|
-|![smart home](./images/开关动作条件.png)| 当开关的状态满足条件时，执行对应的动作。| 当开关的状态为单击时，角色一直说：“你好”，直到开关的状态被改变,条件不满足。|  ![smart home](./images/开关条件满足执行说“你好”.png)|
+| 指令                                     | 功能                                     | 案例                                                         | 参考程序                                                 |
+| ---------------------------------------- | ---------------------------------------- | ------------------------------------------------------------ | -------------------------------------------------------- |
+| ![smart home](./images/开关触发事件.png) | 当触发开关对应的动作时，执行对应事件。   | 当开关长按时，角色右转一段时间                               | ![enter description here](./images/开关长按触发旋转.png) |
+| ![smart home](./images/开关动作条件.png) | 当开关的状态满足条件时，执行对应的动作。 | 当开关的状态为单击时，角色一直说：“你好”，直到开关的状态被改变,条件不满足。 | ![smart home](./images/开关条件满足执行说“你好”.png)     |
 
 ## 人体红外传感器
-|    指令 | 功能    |  案例   |参考程序     |
-| --- | --- | --- | --- |
-|![smart home](./images/红外探测器事件.png)|    当有人体的存在或移动时，执行对应事件。 | 当有人体的存在或移动时，小度音箱说：“你好呀！”|![smart home](./images/红外探测器打招呼.png)|
-|![smart home](./images/人体传感器状态判断.png)|    当检测到有人体的存在或移动时，条件成立。 | 当有人体的存在或移动时，小度音箱说：“你好呀！”，当人离开时，有人的状态会保持一分钟。|![smart home](./images/人体传感器判断案例.png)|
+| 指令                                           | 功能                                     | 案例                                                         | 参考程序                                       |
+| ---------------------------------------------- | ---------------------------------------- | ------------------------------------------------------------ | ---------------------------------------------- |
+| ![smart home](./images/红外探测器事件.png)     | 当有人体的存在或移动时，执行对应事件。   | 当有人体的存在或移动时，小度音箱说：“你好呀！”               | ![smart home](./images/红外探测器打招呼.png)   |
+| ![smart home](./images/人体传感器状态判断.png) | 当检测到有人体的存在或移动时，条件成立。 | 当有人体的存在或移动时，小度音箱说：“你好呀！”，当人离开时，有人的状态会保持一分钟。 | ![smart home](./images/人体传感器判断案例.png) |
+
+## 小米门窗传感器
+| 指令                                           | 功能                                       | 案例                                                         | 参考程序                                     |
+| ---------------------------------------------- | ------------------------------------------ | ------------------------------------------------------------ | -------------------------------------------- |
+| ![smart home](./images/门窗传感器事件.png)     | 当门窗传感器打开或关闭时，执行对应的事件。 | 将门窗传感器贴在门上后，每当门打开时，小度音箱会说“欢迎光临”。 | ![smart home](./images/门窗事件案例.png)     |
+| ![smart home](./images/门窗传感器条件判断.png) | 判断门窗传感器状态是否满足对应条件。       | 当门窗传感器的状态为关闭时，角色提示“门关着”，否则提示“门开着”。 | ![smart home](./images/门窗状态判断案例.png) |
+
+## 小米魔方
+| 指令                                     | 功能                                 | 案例                                                         | 参考程序                                     |
+| ---------------------------------------- | ------------------------------------ | ------------------------------------------------------------ | -------------------------------------------- |
+| ![smart home](./images/魔方动作判断.png) | 判断魔方当前的动作状态是否满足条件。 | 当满足魔方的动作状态为轻推时，魔方会向前移动10步，直到状态被改变，条件不满足时，停止运动。 | ![smart home](./images/魔方条件判断案例.png) |
+
+## 彩光灯LED灯泡
+
+| 指令                                                         | 功能                                         |
+| ------------------------------------------------------------ | -------------------------------------------- |
+| <img src="./images/扫描LED.png"  style="width: 200px;height: 70px;" title="smart home"> | 扫描客户端所在局域网下的所有彩光LED灯泡。    |
+| <img src="./images/打开关闭LED.png"  style="width: 250px;height: 70px;" title="smart home"> | 将彩光灯打开或关闭。                         |
+| <img src="./images/LED亮度.png"  style="width: 300px;height: 70px;" title="smart home"> | 设置彩光的亮度 。                            |
+| <img src="./images/LED颜色.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过调节彩光灯的RGB数值 ，改变彩光灯的颜色。 |
+| <img src="./images/LED色温.png"  style="width: 400px;height: 50px;" title="smart home"> | 通过改变数值调节彩光灯的色温 。              |
+| <img src="./images/LED律动.png"  style="width: 400px;height: 50px;" title="smart home"> | 设置彩光灯的律动效果，并选择对应的律动次数。 |
+
+| 案例                                                         | 参考程序                                           |
+| ------------------------------------------------------------ | -------------------------------------------------- |
+| <center>当人体红外传感器检测到有人出现或移动时，LED彩光灯亮起，营造迪斯科氛围。需要注意，使用彩光灯时，需要先进行扫描。 </center> | ![enter description here](./images/彩光灯案例.png) |
