--- a/docs/智能家居.md
+++ b/docs/智能家居.md
@@ -2,6 +2,68 @@
 
 > ![xxczj](./extensions.png)
 # 智能家居模块
+	包含米家智能家居、泥巴机器人、机器学习等10余种人工智能软、硬件积木插件。	
+	基于米家智能家居套件，让儿童充分体验空间编程。该插件基于dlna设备发现功能去获取自配置的小狮网关IP。
+
+---
+## 米家智能家居套装  
+
+	包括米家智能网关、无线开关、人体红外、门窗传感器、智能插座几种智能家居常用的智能硬件设备。 
+
+![smart_home](images/智能家居/硬件说明/小米智能家居套装.png)
+
+米家智能网关
+
+![smart_home](images/智能家居/硬件说明/米家家居套装-网关.png)
+	
+	网关作用，用来自动检测网关下的所有设备并通信。
+
+无线开关
+
+![smart_home](images/智能家居/硬件说明/米家家居套装-无线开关.png)
+	
+	开关作用，按下即动作，松开释放。在教学场景中可以用来作为开关按键控制。
+
+人体红外
+
+![smart_home](images/智能家居/硬件说明/米家家居套装-人体红外.png)
+
+	人体红外作用，用来探测是否有人经过。频率为一分钟探测一次。
+
+门窗传感器
+
+![smart_home](images/智能家居/硬件说明/米家家居套装-门窗传感器.png)
+
+	门窗传感器作用，用来感应门窗的打开和闭合。
+
+智能插座
+
+![smart_home](images/智能家居/硬件说明/米家家居套装-智能插座.png)
+
+	智能插座作用，用来将插入的识别智能化。
+
+## 魔方控制器
+![smart_home](images/智能家居/硬件说明/魔方.png)
+
+	魔方控制器是一款基于动作感应的智能无线控制器，识别6种控制动作。分别是：
+	- 摇一摇
+	- 敲两下
+	- 翻转90°
+	- 翻转180°
+	- 平面旋转
+	- 推一推
+	这些动作单个使用或者组合起来使用，在教学场景中可以用来作为密码锁，或者开关使用。  
+
+<br />
+
+## dlna设备发现说明  
+
+	dlna可自动发现局域网内的小狮网关信息,加载智能家居插件时，在弹框中显示所有扫描到的小狮网关信息。用户点击自己的小狮网关对应的IP即可与小狮网关建立连接。进行相应的智能硬件操作。
+
+### dlna扫描发现
+
+![smart_home](images/智能家居/smart_home_dlna_scan.png)
+
 ## 小米网关灯
 
 | 指令                                   | 功能                              | 案例                                                     | 参考程序                                    |
